# MedPort

./: .dockerignore  .env  .env.dev  .env.prod.example  .gitignore  .replit  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.nix  start.sh
.github/workflows/: deploy_medport_prod.yml
attached_assets/: Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-uvicorn-main-py-line-579--1744543039385.txt  Pasted--workspace-frontend-npm-update-npm-warn-deprecated-sourcemap-codec-1-4-8-Please-use-jridgewell--1744541196353.txt
backend/: Dockerfile  database.py  init_db.py  main.py  models.py  sample_data.py  schemas.py
backend/routers/: auth.py  bookings.py  payments.py  providers.py  reviews.py  treatments.py  users.py
frontend/: Dockerfile  basic-server.js  package-lock.json  package.json  simple-server.js  start.js  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.html  index.js
frontend/src/components/: BookingForm.js  ComparisonTool.js  Footer.js  Navbar.js  PaymentForm.js  ProviderCard.js  ReviewCard.js  SearchFilters.js
frontend/src/pages/: About.js  Checkout.js  Contact.js  FAQ.js  Home.js  Login.js  Privacy.js  ProviderDashboard.js  ProviderDetail.js  ProviderList.js  Register.js  Terms.js  TreatmentDetail.js  UserProfile.js
frontend/src/store/: authSlice.js  bookingSlice.js  bookingsSlice.js  index.js  providerSlice.js  providersSlice.js
frontend/src/utils/: api.js  (+1 more)
scripts/: database_dump.sql  start.sh  start_db.sh
