[project]
name = "MedPort"
version = "0.1.0"
authors = [
  {name = "Yashar Najafi", email = "yasharnajafi2028@gmail.com"} ]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "stripe>=12.0.0",
    "uvicorn>=0.34.0",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

package-mode = false